--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
           <!-- crétation de l'en tête du tableau -->
           <tr>
             <th> CONFIGURATION DES OUTILS </th>
+            <!-- titre 1er tableau -->
           </tr>
           </thead>
             <tbody>
             <!-- création du contenu prncipal du tableau -->
               <tr>
                 <td class="color"> $ git config --global user.name "[nom]" </td>
+                <!-- création de classe color 1/2 -->
               </tr>
               <tr>
                 <td> Définit le nom que vous voulez associer à toutes vos opérations de commit </td>
@@ -80,6 +82,7 @@
         <thead>
           <tr>
             <th> GROUPER DES CHANGEMENTS </th>
+            <!-- titre 3éme tableau -->
           </tr>
         </thead>
           <tbody>
@@ -109,6 +112,7 @@
          <thead>
            <tr>
              <th> CHANGEMENTS AU NIVEAU DES NOMS DE FICHIERS </th>
+             <!-- titre 4éme tableau -->
            </tr>
          </thead>
           <tbody>
